--- a/config/app.yml
+++ b/config/app.yml
@@ -1,13 +1,12 @@
-#数据库配置
 mysql:
   host: 127.0.0.1
   port: 3306
   user: root
-  password: passowrd
+  password: password
   database: gochat
- #redis配置
+
 redis:
   host: 127.0.0.1
   port: 6379
-  password: passowrd
+  password: password
   db: 0
